Misc: Package json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "com.unitools.defines",
   "version": "0.0.0",
   "unity": "2019.1",
-  "description": "Build Configuration",
+  "description": "Defines",
   "keywords": [
     "unity",
     "unity3d",
