--- a/Editor/UniTools.Defines.asmdef
+++ b/Editor/UniTools.Defines.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "UniTools.Defines",
     "rootNamespace": "UniTools.Defines",
-    "references": [
-        "GUID:1ec9bc22e09f9407db909c86976e6505"
-    ],
+    "references": [],
     "includePlatforms": [
         "Editor"
     ],
